--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -12,7 +12,6 @@
 
     <PreferenceCategory android:title="@string/query_setting_title">
         <ListPreference
-            android:defaultValue="3"
             android:entries="@array/query_frequency_titles"
             android:entryValues="@array/query_frequency_values"
             android:key="query_frequency"
@@ -38,5 +37,10 @@
             android:key="is_auto_disconnect_data"
             android:summary="@string/is_auto_disconnect_data_summary"
             android:title="@string/is_auto_disconnect_data_title" />
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="is_connect_mobile_start"
+            android:summary="@string/is_connect_mobile_start_summary"
+            android:title="@string/is_connect_mobile_start_title" />
     </PreferenceCategory>
 </PreferenceScreen>
